tests/ui/pattern/usefulness/slice-pattern-const.stderr
error: unreachable pattern
  --> $DIR/slice-pattern-const.rs:9:9
   |
LL |         MAGIC_TEST => (),
   |         ---------- matches all the relevant values
LL |         [0x00, 0x00, 0x00, 0x00] => (),
LL |         [84, 69, 83, 84] => (),
   |         ^^^^^^^^^^^^^^^^ no value can reach this
   |
note: the lint level is defined here
  --> $DIR/slice-pattern-const.rs:1:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/slice-pattern-const.rs:15:9
   |
LL |         MAGIC_TEST => (),
   |         ---------- matches all the relevant values
LL |         [84, 69, 83, 84] => (),
   |         ^^^^^^^^^^^^^^^^ no value can reach this

error: unreachable pattern
  --> $DIR/slice-pattern-const.rs:21:9
   |
LL |         [84, 69, 83, 84] => (),
   |         ---------------- matches all the relevant values
LL |         MAGIC_TEST => (),
   |         ^^^^^^^^^^ no value can reach this

error: unreachable pattern
  --> $DIR/slice-pattern-const.rs:28:9
   |
LL |         [4] => (),
   |         --- matches all the relevant values
LL |         FOO => (),
   |         ^^^ no value can reach this

error: unreachable pattern
  --> $DIR/slice-pattern-const.rs:35:9
   |
LL |         [4] => (),
   |         --- matches all the relevant values
LL |         BAR => (),
   |         ^^^ no value can reach this

error: unreachable pattern
  --> $DIR/slice-pattern-const.rs:43:9
   |
LL |         [] => (),
   |         -- matches all the relevant values
LL |         BOO => (),
   |         ^^^ no value can reach this

error: unreachable pattern
  --> $DIR/slice-pattern-const.rs:44:9
   |
LL |         [] => (),
   |         -- matches all the relevant values
LL |         BOO => (),
LL |         b"" => (),
   |         ^^^ no value can reach this

error: unreachable pattern
  --> $DIR/slice-pattern-const.rs:45:9
   |
LL |         [] => (),
   |         -- matches all the relevant values
...
LL |         _ => (),
   |         ^ no value can reach this

error: unreachable pattern
  --> $DIR/slice-pattern-const.rs:51:9
   |
LL |         CONST1 => {}
   |         ------ matches all the relevant values
LL |         [true] => {}
   |         ^^^^^^ no value can reach this

error: aborting due to 9 previous errors

